# AutoShutdown

./: AutoShutdown.csproj  AutoShutdown.manifest  AutoShutdown.rc  AutoShutdown.sln  CMakeLists.txt  Changelog.md  LICENSE  MainForm.Designer.cs  MainForm.cs  Program.cs  README.md  build.bat  main.cpp  resource.h
